--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,8 @@
 	path = OCA/community-data-files
 	url = git@github.com:OCA/community-data-files.git
 	branch = 13.0
+
+[submodule "OCA/web"]
+	path = OCA/web
+	url = git@github.com:OCA/web.git
+	branch = 13.0
