--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "OCA/purchase-workflow"]
+ç[submodule "OCA/purchase-workflow"]
 	path = OCA/purchase-workflow
 	url = git@github.com:OCA/purchase-workflow.git
 	branch = 13.0
@@ -26,11 +26,6 @@
 [submodule "OCA/server-ux"]
 	path = OCA/server-ux
 	url = git@github.com:OCA/server-ux.git
-	branch = 13.0
-
-[submodule "OCA/stock-logistics-workflow"]
-	path = OCA/stock-logistics-workflow
-	url = git@github.com:OCA/stock-logistics-workflow.git
 	branch = 13.0
 
 [submodule "OCA/account-invoicing"]
