[ADD] submodule OCA/commission

--- a/.gitmodules
+++ b/.gitmodules
@@ -62,3 +62,8 @@
 	path = OCA/reporting-engine
 	url = git@github.com:OCA/reporting-engine.git
 	branch = 13.0
+
+[submodule "OCA/commission"]
+	path = OCA/commission
+	url = git@github.com:OCA/commission.git
+	branch = 13.0
