--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,8 @@
 	path = OCA/commission
 	url = git@github.com:OCA/commission.git
 	branch = 13.0
+
+[submodule "OCA/server-tools"]
+	path = OCA/server-tools
+	url = git@github.com:OCA/server-tools.git
+	branch = 13.0
