--- a/.gitmodules
+++ b/.gitmodules
@@ -77,3 +77,8 @@
 	path = landoo-es/custom-imeguisa
 	url = git@github.com:landoo-es/custom-imeguisa.git
 	branch = 13.0
+
+[submodule "OCA/bank-payment"]
+	path = OCA/bank-payment
+	url = git@github.com:OCA/bank-payment.git
+	branch = 13.0
