--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,8 @@
 	path = OCA/l10n-spain
 	url = git@github.com:OCA/l10n-spain.git
 	branch = 13.0
+
+[submodule "landoo-es/custom-imeguisa"]
+	path = landoo-es/custom-imeguisa
+	url = git@github.com:landoo-es/custom-imeguisa.git
+	branch = 13.0
